deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: flask-dp
  labels:
    app: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: talhaanis1234/flask-app:latest
        ports:
        - containerPort: 5000
