svc.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: flask-svc
spec:
  type: NodePort
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 5000
